<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bizconnectivity.gino.activities.HelpSupportActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_help_support"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/faq_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/single_line_height"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables"
                    android:onClick="faqOnClick">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_question_answer_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/subheading"
                        android:textStyle="bold"
                        android:text="@string/title_faq"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedback_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/single_line_height"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables"
                    android:onClick="feedbackOnClick">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_feedback_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/subheading"
                        android:textStyle="bold"
                        android:text="@string/title_feedback"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/contact_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/single_line_height"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables"
                    android:onClick="contactOnClick">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_perm_contact_calendar_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/subheading"
                        android:textStyle="bold"
                        android:text="@string/title_contact"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/privacy_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/single_line_height"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables"
                    android:onClick="privacyOnClick">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_lock_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/subheading"
                        android:textStyle="bold"
                        android:text="@string/title_privacy_policy"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/terms_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/single_line_height"
                    android:paddingStart="@dimen/padding_16"
                    android:paddingEnd="@dimen/padding_16"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables"
                    android:onClick="termsOnClick">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:tint="@color/colorPrimaryDark"
                        android:src="@drawable/ic_assignment_white_24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="0dp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/subheading"
                        android:textStyle="bold"
                        android:text="@string/title_terms"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
